# conda-pack

./: .buildinfo  .coveragerc  .doctr-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Changelog.md  HOW_WE_USE_GITHUB.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  api.html  appveyor.yml  cli.html  genindex.html  github_deploy_key_conda_conda_pack.enc  index.html  objects.inv  parcel.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  spark.html  squashfs.html  versioneer.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/workflows/: cla.yml  cleanup.yml  docs.yml  main.yml  publish.yml  stale.yml  update.yml
_sources/: index.rst.txt  spark.rst.txt
_static/: alabaster.css  documentation_options.js
conda-recipe/: meta.yaml
conda.recipe/: meta.yaml
conda_pack/: __init__.py  _progress.py  _version.py  cli.py  compat.py  core.py  formats.py  formats_base.py  formats_libarchive.py  plugin.py  prefixes.py
conda_pack/tests/: conftest.py  test_cli.py  test_core.py  test_formats.py  test_prefixes.py
docs/: Makefile  make.bat
docs/source/: api.rst  cli.rst  conf.py  index.rst  parcel.rst  spark.rst  squashfs.rst  (+1 more)
news/: 252-allow-compression-level-in-zip-files  275-fix-windows-seperator  295-create-output-dir-if-missing-and-force  298_zstd_support  306-fix-hard-link-failure  351-add-zstd-support  360-drop-py37  issue-345  osx-arm64-support  parcel-provides-enhancement  support-pixi-environments.md
testing/: break_package_cache.py  setup.py  setup_envs.bat  setup_envs.sh
(+33 files in other folders)
